--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
 		<!--<h1>Google Homepage</h1>-->
 		<nav class="header-nav">
 			<ul>
-				<li><a href="">Gmail</a></li>
+				<li><a href="https://mail.google.com/mail/?tab=wm">Gmail</a></li>
 				<li><a href="">Images</a></li>
-				<li><a href="">Google Apps</a></li>
-				<li><a href="">Sign in</a></li>
+				<li><a href="https://www.google.co.uk/intl/en/options/">Google Apps</a></li>
+				<li id="signIn">
+					<a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.co.uk/%3Fgfe_rd%3Dcr%26ei%3DZm3BWKjNMMLU8gfxx4S4Aw%26gws_rd%3Dssl#identifier">
+						Sign in
+					</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
 	<form action="#" method="POST" class="googleForm">
-		<div id="searchQuery"><input type="Search" name="search-query" class="searchQuery"></div><br>
+		<img src="googleLogo.png" class="googleLogo">
+		<div id="searchQuery">
+			<input type="Search" name="search-query" class="searchQuery" placeholder="Search Google or type URL">
+		</div><br>
 		<div class="buttons">
 			<input type="button" class="btn1" value="Google Search" name="googleSearch">
 			<input type="button" class="btn2" value="I'm Feeling Lucky" name="randomSearch">
